SET(SOURCE_FILES
main.cpp
)

INCLUDE_DIRECTORIES（
/usr/local/include
${PROJECT_SOURCE_DIR}/utility
${PROJECT_SOURCE_DIR}/include
)

LINK_LIBRARIES(
/usr/local/lib
${PROJECT_SOURCE_DIR}/lib
)

ADD_EXECUTABLE(server  ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(server
utility

）

SET_TARGET_PROPERTIES(server PROPERTIES RUNTIME_OUTPUT_DIRECTORY  "${PROJECT_SOURCE_DIR}/bin") 
